chore/auth-service: change the ormconfig to .envn

--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/typeorm": "^6.2.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/faker": "^4.1.9",
+    "@types/jsonwebtoken": "^8.3.7",
+    "bcryptjs": "^2.4.3",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
