--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "bcryptjs": "^2.4.3",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "nest-winston": "^1.3.1",
     "pg": "^7.17.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "typeorm": "^0.2.22"
+    "typeorm": "^0.2.22",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
