--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^0.1.0",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.2.3",
     "@nestjs/typeorm": "^6.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/faker": "^4.1.9",
@@ -36,7 +37,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "typeorm": "^0.2.21",
+    "swagger-ui-express": "^4.1.3",
+    "typeorm": "^0.2.22",
     "winston": "^3.2.1"
   },
   "devDependencies": {
