--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/faker": "^4.1.9",
     "@types/jsonwebtoken": "^8.3.7",
     "bcryptjs": "^2.4.3",
+    "cls-hooked": "^4.2.2",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "nest-winston": "^1.3.1",
@@ -39,6 +40,7 @@
     "rxjs": "^6.5.3",
     "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.22",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
