fix: Fixed Faker Lib

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ TYPEORM_DATABASE = auth-api
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
-TYPEORM_ENTITIES = dist/domain/entity/*.js
+TYPEORM_ENTITIES = dist/src/domain/entity/*.js
 ENV = DEV
 SALT_ROUNDS = 10
 PROJECT_NAME = Dlabs-auth-api
