--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "cross-env TYPEORM_USERNAME=test TYPEORM_PASSWORD=test TYPEORM_DATABASE=test TYPEORM_DROP_SCHEMA=true  TYPEORM_LOGGING=false jest --runInBand",
-    "test:cov": "cross-env TYPEORM_USERNAME=test TYPEORM_PASSWORD=test TYPEORM_DATABASE=test TYPEORM_DROP_SCHEMA=true TYPEORM_LOGGING=false cross-env jest --coverage",
+    "test:cov": "cross-env TYPEORM_USERNAME=test TYPEORM_PASSWORD=test TYPEORM_DATABASE=test TYPEORM_DROP_SCHEMA=true TYPEORM_LOGGING=false cross-env jest  --runInBand --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": " cross-env TYPEORM_USERNAME=test TYPEORM_PASSWORD=test TYPEORM_DATABASE=test TYPEORM_DROP_SCHEMA=true  TYPEORM_LOGGING=true jest --config ./src/controller/test/jest-e2e.json"
+    "test:e2e": " cross-env TYPEORM_USERNAME=test TYPEORM_PASSWORD=test TYPEORM_DATABASE=test TYPEORM_DROP_SCHEMA=true  TYPEORM_LOGGING=true jest  --runInBand --config ./src/controller/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
