--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = dist/src/domain/entity/*.js
+TYPEORM_DROP_SCHEMA=false
 ENV = DEV
 SALT_ROUNDS = 10
 PROJECT_NAME = Dlabs-auth-api
