--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TYPEORM_PASSWORD = pgadmin
 TYPEORM_DATABASE = auth-api
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
-TYPEORM_LOGGING = false
+TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = dist/src/domain/entity/*.js
 TYPEORM_DROP_SCHEMA=false
 ENV = DEV
